[package]
name = "bpfbench"
version = "0.1.0"
authors = ["William Findlay <william@williamfindlay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
anyhow = "1.0.40"
#libbpf-rs = "0.9.3"
libbpf-rs = { git = "https://github.com/libbpf/libbpf-rs" }

[build-dependencies]
#libbpf-cargo = "0.6.3"
libbpf-cargo = { git = "https://github.com/libbpf/libbpf-rs" }
glob = "0.3.0"
uname = "0.1.1"
