[package]
name = "bpfbench"
version = "0.1.0"
authors = ["William Findlay <william@williamfindlay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bpfbench"

[lib]
name = "bpfbench"

[dependencies]
clap = "2.33.3"
anyhow = "1.0.40"
#libbpf-rs = "0.9.3"
libbpf-rs = { git = "https://github.com/willfindlay/libbpf-rs", branch = "bpfcontain-tree" }
libc = "0.2.94"
scopeguard = "1.1.0"
plain = "0.2.3"
ctrlc = { version = "3.1.9", features = ["termination"] }
signal-hook = "0.3.8"
nix = "0.20.0"
conv = "0.3.3"

[build-dependencies]
#libbpf-cargo = "0.6.3"
libbpf-cargo = { git = "https://github.com/willfindlay/libbpf-rs", branch = "bpfcontain-tree" }
glob = "0.3.0"
uname = "0.1.1"
